<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/who_are_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/who_are_you"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/admin"
        android:textStyle="italic"
        tools:typeface="sans" />

    <TextView
        android:id="@+id/or1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/or"/>

    <Button
        android:id="@+id/employee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="100dp"
        android:text="@string/employee"
        android:textStyle="italic"
        tools:typeface="sans" />

    <TextView
        android:id="@+id/or2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/or"/>

    <Button
        android:id="@+id/client_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="100dp"
        android:text="@string/client"
        android:textStyle="italic"
        tools:typeface="sans" />


</LinearLayout>