<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="30dp"
    tools:context=".AddEmployee">

    <TextView
        android:id="@+id/add_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_client"
        android:layout_marginTop="30dp"
        android:textSize="25sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/client_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#A100399C">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/client_username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#4F1B9A"
        android:layout_marginTop="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/client_contact_number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/client_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_address"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addClientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="30dp"/>

</LinearLayout>
