<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignTask"
    android:orientation="vertical"
    android:paddingHorizontal="30dp">

    <TextView
        android:id="@+id/assign_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign_task"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="start"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/task_to_do" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/selectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/select_date"
        />

    <Button
        android:id="@+id/assignBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/assign"/>
</LinearLayout>