<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/employeeHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/client_employeeActivity"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientNameEmp"
        android:textSize="20sp"
        android:textAlignment="gravity"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toDoEmp"
        android:layout_marginTop="25dp"
        android:text="@string/task_to_do_emp_ac"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toDoOp"
        android:textAlignment="gravity"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientAddress"
        android:layout_marginTop="25dp"
        android:text="@string/client_address_emp_ac"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientAddressOp"
        android:textAlignment="gravity"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientContact"
        android:layout_marginTop="25dp"
        android:text="@string/client_contact_emp_ac"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientContactOp"
        android:textAlignment="gravity"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/performDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/perform_date_emp_ac"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/performDateOp"
        android:textAlignment="gravity"
        android:textSize="20sp"/>



</LinearLayout>